# di-bip340-python

./: .gitignore  README.md  pyproject.toml
di_bip340/: __main__.py  cryptosuite.py  data_integrity_proof.py  multikey.py
di_schnorr_secp256k1/: __main__.py  cryptosuite.py  data_integrity_proof.py  multikey.py
src/di_schnorr_secp256k1.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
test/: test_verify.py
